# docs/swagger.json
@@ -141,11 +141,76 @@
                     "管理后台-管理员用户"
                 ],
                 "summary": "管理员列表",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "default": 1,
+                        "description": "当前页",
+                        "name": "current",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "default": 20,
+                        "description": "每页条数",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "需要排序的列",
+                        "name": "order_key",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "ase",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "description": "排序方式",
+                        "name": "order_type",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "按用户名搜索",
+                        "name": "keyword",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "resp",
                         "schema": {
-                            "type": "string"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/resp.Result"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/resp.RList"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "list": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/definitions/model.AdminUser"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -160,7 +225,7 @@
                 "tags": [
                     "管理后台-管理员用户"
                 ],
-                "summary": "管理员新增",
+                "summary": "新增管理员",
                 "parameters": [
                     {
                         "description": "管理员信息",
@@ -174,9 +239,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "resp.Result",
+                        "description": "resp",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/resp.Result"
                         }
                     }
                 }
@@ -263,9 +328,42 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "resp.Result",
+                        "description": "resp",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/resp.Result"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/admin/user/status/{id}": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "管理后台-管理员用户"
+                ],
+                "summary": "修改管理员状态(封禁/解封)",
+                "parameters": [
+                    {
+                        "description": "用户状态",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.UpdateAdminUserStatusBodyDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "resp",
+                        "schema": {
+                            "$ref": "#/definitions/resp.Result"
                         }
                     }
                 }
@@ -325,7 +423,7 @@
                 "tags": [
                     "管理后台-管理员用户"
                 ],
-                "summary": "管理员修改",
+                "summary": "修改管理员信息",
                 "parameters": [
                     {
                         "description": "管理员信息",
@@ -339,9 +437,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "resp.Result",
+                        "description": "resp",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/resp.Result"
                         }
                     }
                 }
@@ -598,6 +696,10 @@
                 "username"
             ],
             "properties": {
+                "avatar": {
+                    "description": "头像",
+                    "type": "string"
+                },
                 "email": {
                     "description": "邮箱",
                     "type": "string"
@@ -674,9 +776,33 @@
                 "name"
             ],
             "properties": {
+                "avatar": {
+                    "description": "头像",
+                    "type": "string"
+                },
                 "name": {
                     "description": "姓名",
                     "type": "string"
+                }
+            }
+        },
+        "api.UpdateAdminUserStatusBodyDto": {
+            "type": "object",
+            "required": [
+                "status"
+            ],
+            "properties": {
+                "status": {
+                    "description": "状态 1-解封 2-封禁",
+                    "enum": [
+                        -1,
+                        1
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/consts.AdminUserStatus"
+                        }
+                    ]
                 }
             }
         },
@@ -848,18 +974,6 @@
                 "CaptchaTypeEmail"
             ]
         },
-        "gorm.DeletedAt": {
-            "type": "object",
-            "properties": {
-                "time": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
         "model.AdminUser": {
             "type": "object",
             "properties": {
@@ -868,9 +982,6 @@
                 },
                 "created_at": {
                     "type": "string"
-                },
-                "deleted_at": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "email": {
                     "type": "string"
@@ -885,17 +996,26 @@
                 "name": {
                     "type": "string"
                 },
-                "password": {
-                    "type": "string"
-                },
                 "status": {
                     "$ref": "#/definitions/consts.AdminUserStatus"
                 },
                 "updated_at": {
                     "type": "string"
                 },
-                "user_name": {
+                "username": {
                     "type": "string"
+                }
+            }
+        },
+        "resp.RList": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {}
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
