# types/types.go
@@ -1,15 +1,13 @@
 package types
 
-import "server/consts"
-
-// PaginationQuery 分页查询
+// Pagination 分页查询
 type Pagination struct {
-	Current  int `json:"current"`
-	PageSize int `json:"page_size"`
+	Current  int `json:"current" form:"current" binding:"omitempty,min=1"`
+	PageSize int `json:"page_size" form:"page_size" binding:"omitempty,min=0"`
 }
 
-// OrderQuery 排序
+// Order 排序
 type Order struct {
-	OrderKey  string           `json:"order_key"`
-	OrderType consts.OrderType `json:"order_type"`
+	OrderKey  string `json:"order_key" form:"order_key"`
+	OrderType string `json:"order_type" form:"order_type"`
 }
